<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/nav_home" />
        <item
            android:id="@+id/nav_search"
            android:title="@string/search"
            android:icon="@drawable/search_icon" />
        <item
            android:id="@+id/nav_all_categories"
            android:title="@string/all_categories"
            android:icon="@drawable/nav_all_categories" />
        <item
            android:id="@+id/nav_add_missing_place"
            android:title="@string/add_missing_place"
            android:icon="@drawable/add_missing_place_icon" />

    </group>

    <item android:title="Profile" >
        <menu>

            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/login"
                    android:icon="@drawable/nav_login" />
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/nav_profile" />
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/nav_logout" />

            </group>

        </menu>

    </item>

    <item android:title="Categories" >
        <menu>

            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/nav_restaurants"
                    android:title="@string/restaurants"
                    android:icon="@drawable/restaurant_icon" />
                <item
                    android:id="@+id/nav_bank"
                    android:title="@string/hotels"
                    android:icon="@drawable/bank_icon" />
                <item
                    android:id="@+id/nav_education"
                    android:title="@string/education"
                    android:icon="@drawable/nav_education" />
                <item
                    android:id="@+id/nav_shop"
                    android:title="Malls"
                    android:icon="@drawable/shops_icon" />

            </group>

        </menu>

    </item>

    <item android:title="Share" >
        <menu>

            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/nav_share"
                    android:title="@string/share"
                    android:icon="@drawable/nav_share" />
                <item
                    android:id="@+id/nav_rate_us"
                    android:title="@string/rate_us"
                    android:icon="@drawable/nav_rate_us" />

            </group>

        </menu>

    </item>

</menu>